<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluefinder</string>
    <string name="menu_settings">Settings</string>
    <string name="title_checkbox_preference">Checkbox preferences</string>
    <string name="dialog_no_bluetooth">This application requires Bluetooth on your device to function</string>
    <string name="confirm">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_for_last_connection">SearchForLastConnection</string>
    <string name="title_activity_find_car_locator">Device Disconnect Location</string>
    <string name="pref_summary_auto_delete">Autodeleted?</string>
    <string name="pref_title_auto_delete">title Autodelete</string>
    <string name="pref_notification_group_key">Notification Options</string>
    <string name="pref_notification_group_title">Notification Options</string>
    <string name="pref_toast_notification_key">pref_toast_notification_key</string>
    <string name="pref_toast_notification_title">Show notifications</string>
    <string name="pref_toast_notification_summary">Display a toast notification on disconnection</string>
    <string name="pref_power_disconnect_key">pref_power_disconnect_key</string>
    <string name="pref_power_disconnect_title">Track power disconnections</string>
    <string name="pref_power_disconnect_summary">Track disconnections from power sources</string>
    <string name="pref_bluetooth_disconnect_key">pref_bluetooth_disconnect_key</string>
    <string name="pref_bluetooth_disconnect_title">Track Bluetooth disconnections</string>
    <string name="pref_bluetooth_disconnect_summary">Track disconnections from Bluetooth devices</string>
    <string name="pref_show_help_screen_key">pref_show_help</string>
    <string name="pref_show_help_screen_title">Show Help Screen</string>
    <string name="pref_show_help_screen_summary">Help screen will be shown the next time the application is started</string>
    <string name="menu_ammunition">Ammunition</string>
    <string name="empty_list_text">List is empty</string>
    <string name="device_name_text">Device Name</string>
    <string name="device_address_text">Device address</string>
    <string name="unknown_remaining_locations">\?</string>\
    <integer name="default_trial_location_count">10</integer>
    <string name="play_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjWotdYybruQzh1pRZp5TIHpQCz9stm6IqKpagga/LH9egFWLuDUDspnQaLB5pu+UDAJmocK8Kb52MmegPGX3aygTUuqvy/Eqbjc+HfKzdAOj6TDANmcSZioI19D7JnK735rjg6poUs912oHHxpNUOV/zU3c2sFkw8zMJ/Y4nwec1UWBv8nL4Z+jJKk7QaB/G85YrRDk5F4217UYi1I0t7DOUaWWYC+q9JTybLStI98OMh6OBl8pH1N/4WMrrOudDzQ3iJrLmrDhvVlygwWMsKKLzVdCSMegDwuBBYmNOzyrRQ2gYb+9BfKJDBknmSq0SsliyQe7EaSySaF82Dfi73QIDAQAB</string>
    <string name="tracking_preferences">Tracking Options</string>
    <string name="pref_tracking_group_key">Tracking Options</string>
    <string name="help_options_title">Help Options</string>
    <string name="help_options_key">help_options</string>
    <string name="number_of_locations_remaining">Locations\nRemaining</string>
    <string name="POWER">POWER</string>
    <string name="help_view_content_description">Help View</string>
</resources>