<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notification_group_title"
        android:key="@string/pref_notification_group_key">
        <CheckBoxPreference
            android:key="@string/pref_toast_notification_key"
            android:title="@string/pref_toast_notification_title"
            android:summary="@string/pref_toast_notification_summary"
            android:defaultValue="true">

        </CheckBoxPreference>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/tracking_preferences"
        android:key="@string/pref_tracking_group_key">
        <CheckBoxPreference
            android:key="@string/pref_power_disconnect_key"
            android:title="@string/pref_power_disconnect_title"
            android:summary="@string/pref_power_disconnect_summary"
            android:defaultValue="true"></CheckBoxPreference>
        <CheckBoxPreference
            android:key="@string/pref_bluetooth_disconnect_key"
            android:title="@string/pref_bluetooth_disconnect_title"
            android:summary="@string/pref_bluetooth_disconnect_summary"
            android:defaultValue="true"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/help_options_title"
        android:key="@string/help_options_key">
        <CheckBoxPreference
            android:key="@string/pref_show_help_screen_key"
            android:title="@string/pref_show_help_screen_title"
            android:summary="@string/pref_show_help_screen_summary"
            android:defaultValue="true"></CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>